--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -49,7 +49,7 @@
 <script src="/assets/lib/jquery.js"></script>
 <script src="/assets/lib/cropper/Cropper.js"></script>
 <script src="/assets/lib/cropper/jquery-cropper.js"></script>
-<script src="/assets/lib/layui/layui.js"></script>
+<script src="/assets/lib/layui/layui.all.js"></script>
 <script src="/assets/js/baseApi.js"></script>
 <script src="/assets/js/user/user_avatar.js"></script>
 
