--- a/article/art_cate.html
+++ b/article/art_cate.html
@@ -53,11 +53,11 @@
         <td>{{$value.alias}}</td>
         <td>
           <button type="button" class="layui-btn layui-btn-xs btn-edit" data-id="{{$value.Id}}">编辑</button>
-          <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>    
+          <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete" data-id="{{$value.Id}}">删除</button>    
         </td>
     </tr>
     {{/each}}
-        </script>
+    </script>
     <!-- 定义弹出层模板 -->
     <script type="text/html" id="dialog-add">
     <form class="layui-form" id="form-add">
